# http-body-server-sent-events

./: Cargo.toml
src/: decode.rs  event.rs  lib.rs
src/decode/: lines.rs  tests.rs
src/examples/: all_fields.txt  data_only_messages.txt  html_living_standard_0.txt  html_living_standard_1.txt  html_living_standard_2.txt  mixing_and_matching.txt
