[package]
name = "http-body-server-sent-events"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
futures = { version = "0.3.31", default-features = false }
http-body = "1.0.1"
pin-project = "1.1.7"

[dev-dependencies]
http-body-util = "0.1.2"
rstest = "0.23.0"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.16", features = ["time"] }
